--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "puppeteer-extra": "^3.1.18",
       "puppeteer-extra-plugin-stealth": "^2.7.10"
     },
-    "author": "Your Name",
+    "author": "Guri",
     "license": "ISC"
   }
   
